tests/compilation/examples/fail_helpful_warning.stderr
error: failed
 --> tests/compilation/examples/fail_helpful_warning.rs:3:1
  |
3 | #[error]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `error` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: be careful
  --> tests/compilation/examples/fail_helpful_warning.rs:10:1
   |
10 | helpful_warning!();
   | ^^^^^^^^^^^^^^^^^^
   |
help: this might help you understand
  --> tests/compilation/examples/fail_helpful_warning.rs:10:1
   |
10 | helpful_warning!();
   | ^^^^^^^^^^^^^^^^^^
note: this warning originates from the macro invocation here
  --> tests/compilation/examples/fail_helpful_warning.rs:10:1
   |
10 | helpful_warning!();
   | ^^^^^^^^^^^^^^^^^^
   = note: this warning originates in the macro `helpful_warning` (in Nightly builds, run with -Z macro-backtrace for more info)
